<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/app_bar_main">

<android.support.v4.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/nested_scroll_view"
    android:scrollbars="none"
    android:scrollingCache="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:descendantFocusability="blocksDescendants"
        android:onClick="click_menu_save_post"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:visibility="visible"
            app:cardCornerRadius="2dp"
            app:cardElevation="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/img_B_more"
                        android:layout_width="wrap_content"
                        android:layout_height="?attr/actionBarSize"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:onClick="click_menu_save_post"
                        android:tint="@color/gray_40"
                        app:srcCompat="@drawable/ic_more" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="?attr/actionBarSize"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginRight="5dp"
                        android:gravity="right"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center_vertical"
                                android:text="@string/theme"
                                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                                android:textColor="@android:color/black" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:gravity="center_vertical"
                                android:text="@string/time"
                                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                                android:textColor="@android:color/darker_gray" />

                        </LinearLayout>


                        <com.mikhaellopez.circularimageview.CircularImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginLeft="10dp"
                            android:src="@mipmap/kafil"
                            app:civ_border="false" />

                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginBottom="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:text="@string/khirNm"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                        android:textColor="@android:color/black"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/dusc"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                        android:textColor="@color/gray_40" />
                </LinearLayout>


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="200dp">

                    <com.smarteist.autoimageslider.SliderLayout
                        android:id="@+id/imageSlider"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignParentTop="true" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_margin="20dp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                        android:textColor="@color/colorPrimary"
                        android:textStyle="bold" />

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="3dp"
                        android:layout_weight="1"
                        android:orientation="horizontal"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp">

                        <TextView
                            android:id="@+id/textView5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="1250 View"
                            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                            android:textColor="@color/gray_40" />

                        <TextView
                            android:id="@+id/textView4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="20dp"
                            android:text="230 Like"
                            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                            android:textColor="@color/gray_40" />

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="15 share"
                            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                            android:textColor="@color/gray_40" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1"
                        android:background="@color/ccc"
                        android:orientation="vertical">

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/colorBlue"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="horizontal">

                            <ImageButton
                                android:layout_width="?attr/actionBarSize"
                                android:layout_height="?attr/actionBarSize"
                                android:background="?attr/selectableItemBackgroundBorderless"
                                android:clickable="true"
                                android:tint="@color/orange"
                                app:srcCompat="@drawable/ic_mssg" />

                            <ImageButton
                                android:layout_width="?attr/actionBarSize"
                                android:layout_height="?attr/actionBarSize"
                                android:background="?attr/selectableItemBackgroundBorderless"
                                android:clickable="true"
                                android:tint="@android:color/holo_green_dark"
                                app:srcCompat="@drawable/ic_call" />
                        </LinearLayout>

                        <Button
                            android:layout_width="?attr/actionBarSize"
                            android:layout_height="?attr/actionBarSize"
                            android:layout_marginRight="10dp"
                            android:background="?attr/selectableItemBackgroundBorderless"
                            android:clickable="true"
                            android:drawableLeft="@drawable/ic_like"
                            android:text="Like"
                            android:textColor="@android:color/white"
                            android:tint="@android:color/white" />

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="?attr/actionBarSize"
                            android:background="?attr/selectableItemBackgroundBorderless"
                            android:clickable="true"
                            android:drawableLeft="@drawable/ic_share"
                            android:text="share"
                            android:textColor="@android:color/white"
                            android:tint="@android:color/white" />
                    </LinearLayout>


                </LinearLayout>

            </LinearLayout>


        </android.support.v7.widget.CardView>
    </LinearLayout>


</android.support.v4.widget.NestedScrollView>
</android.support.constraint.ConstraintLayout>